--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,18 +5,25 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cloudinary": "^2.9.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.3",
     "middleware": "^1.0.0",
     "mongoose": "^8.13.2",
-    "nodemailer": "^6.10.1"
+    "multer": "^2.0.2",
+    "nodemailer": "^6.10.1",
+    "nodemon": "^3.1.11"
   }
 }
